Added searching by address
